# NPMP-skupina03-Sem2

./: .gitignore  README.md  and.qca  example_majoritygate.qca  example_negator.qca  komentarji_20_12_2024.txt  pyproject.toml
src/: get_components.py
src/komponente_QCA_files/: 1bit_fulladder.qca  2_1_mux.qca  3vhodni_and.qca  3vhodni_or.qca  4bit_fulladder.qca  5vhodna_majoritetna.qca  5vhodna_majoritetna_2.qca  5vhodna_majoritetna_3.qca  5vhodna_majoritetna_4.qca  and.qca  majority.qca  negator.qca  negator_reliable.qca  or.qca  rotated_majority.qca  xor.qca  xor_2.qca  xor_3.qca  xor_4.qca
src/qca_parser/: cell.py  cell_graph.py  component.py  converter.py  gate.py  graph.py  main.py  majority_gate.py  negator.py  parser.py  simulator.py  utils.py
