[project]
name = "qca-parser"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Iztok Bajcar", email = "ib8548@student.uni-lj.si"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
