[project]
name = "qca-parser"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Iztok Bajcar", email = "ib8548@student.uni-lj.si"},
]
dependencies = [
    "pyvis>=0.3.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
